crates/vise/tests/ui/metrics/bogus_metric_name.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/metrics/bogus_metric_name.rs:6:5
  |
6 |     счетчик: Counter,
  |     ^^^^^^^ the evaluated program panicked at 'Metric name `счетчик` is invalid: name contains non-ASCII chars, first at position 0', $DIR/tests/ui/metrics/bogus_metric_name.rs:6:5
